fix display SingleCategoryFullWidthNoVue and align disitances

--- a/src/TrueOrFalse.Frontend.Web/Views/Questions/Answer/AnswerQuestion.less
+++ b/src/TrueOrFalse.Frontend.Web/Views/Questions/Answer/AnswerQuestion.less
@@ -894,70 +894,87 @@
     margin-left: unset;
 }
 
-
-/* Primary Category Card */
-
-.singleCatFullWidth{
+.singleCatFullWidth {
     margin-top: 2.25em;
+    margin-bottom:2.25em;
+
+    .col-xs-9 {
+        @media(max-width: 1200px) {
+            width: 100%;
+        }
+        .col-xs-2{
+            min-width: 128px;
+        }
+    }
+
+    .flex {
+        display: flex;
+        align-items: center;
+    }
+    .buttons{
+        padding-top: 15px;
+    }
 }
-/*--------------------------ActivityPoints---------------------
+    /* Primary Category Card */
+    /*--------------------------ActivityPoints---------------------
 
 ---------------------------------------------------------------*/
-#activityPointsDispaly {
-    float: right;
-    font-size: 22px;
-    font-family: sans-serif;
-    line-height: normal;
-    color: RGB(185,219,79);
-    .fa-info-circle{
-        font-size: 14px;
+    #activityPointsDispaly {
+        float: right;
+        font-size: 22px;
+        font-family: sans-serif;
+        line-height: normal;
+        color: RGB(185,219,79);
+
+        .fa-info-circle {
+            font-size: 14px;
+        }
+
+        small {
+            font-size: 10px;
+            display: block;
+        }
     }
-
-    small {
-        font-size: 10px;
-        display: block;
-    }
-}
-
-
-/*-----------------------AnswerQuestionBodyMenu--------------------
+    /*-----------------------AnswerQuestionBodyMenu--------------------
 
 ---------------------------------------------------------------*/
+    .AnswerQuestionBodyMenu {
+        display: flex;
+        float: right;
 
-.AnswerQuestionBodyMenu {
-    display: flex;
-    float: right;
+        .Pin {
+            padding-right: 5px;
+        }
 
-    .Pin {
-        padding-right: 5px;
+        .edit-question {
+            margin-top: 0.7em;
+            padding-right: 8px;
+        }
+
+        .category {
+            margin-right: 15px;
+        }
+
+        .set {
+            margin-right: 15px
+        }
+
+        .margin-top-4 {
+            margin-top: 0.25em;
+        }
+
+        .dropdown-menu {
+            z-index: 10;
+        }
+
+        .dropdown-toggle {
+            padding-right: 0px;
+        }
     }
 
-    .edit-question {
-        margin-top: 0.7em;
-        padding-right: 8px;
+    .SingleCategoryAttention {
+        .well {
+            background-color: rgba(112, 112, 112, .08)
+        }
     }
-    .category{
-        margin-right: 15px;
-    }
-    .set{
-        margin-right: 15px
-    }
-    .margin-top-4 {
-        margin-top: 0.25em;
-    }
-
-    .dropdown-menu {
-        z-index: 10;
-    }
-
-    .dropdown-toggle{
-        padding-right: 0px;
-    }
-}
-
-.SingleCategoryAttention {
-    .well {
-        background-color: rgba(112, 112, 112, .08)
-    }
-}
 
